@@ -1,4 +1,5 @@
 rex (0.3.0) unstable; urgency=low
+  * added simple rsync support
   * run commands directly from command line
   * serverranges (group "backend" => "be[01..40]";)
   * ability to call tasks from other tasks
